--- a/caliopen_website/templates/layout/contact.jinja2
+++ b/caliopen_website/templates/layout/contact.jinja2
@@ -6,8 +6,7 @@
       <div>
         <div class="content">
           <h2>{{ _('Aujourd\'hui, nous avons besoin d\'aide.') }}</h2>
-          <p>{{ _('Pour avancer plus rapidement sur le développement de notre interface utilisateur') }}</p>
-          <p>{{ _('Pour toute question, ou pour proposer votre aide, vous pouvez nous contacter.') }}</p>
+          <p>{{ _('Pour avancer plus rapidement sur le développement de notre interface utilisateur, nous avons besoin de développeurs Web (Angular, Pyramid, Python). Nous avons besoin de compétences dans le domaine de la cryptographie aussi, pour valider nos choix ou pour les améliorer.\n\nPour toute question, ou pour proposer votre aide, vous pouvez nous contacter.')|safe }}</p>
         </div>
       </div>
   </main>
@@ -18,17 +17,17 @@
     <div class="layout">
       <div class="big-icons">
         <article id="github">
-          <h3>{{ _('Fork us on GitHub') }}</h3>
+          <h3>{{ _('Forker nous sur GitHub') }}</h3>
           <a href="https://github.com/CaliOpen/CaliOpen" class="logo">{{ _('octopus Github') }}</a>
         </article>
 
         <article id="email">
-          <h3>{{ _('Send an email') }}</h3>
+          <h3>{{ _('Envoyer un email') }}</h3>
           <a href="/" class="logo">{{ _('enveloppe') }}</a>
         </article>
 
         <article id="blog">
-          <h3>{{ _('Visit our blog') }}</h3>
+          <h3>{{ _('Visiter notre blog') }}</h3>
           <a href="/" class="logo">{{ _('bubble') }}</a>
         </article>
       </div>
