--- a/caliopen_website/templates/layout/home.jinja2
+++ b/caliopen_website/templates/layout/home.jinja2
@@ -5,7 +5,7 @@
     <div class="layout">
       <div>
         <article>
-          <h2>{{ _('The best way to discuss with your contacts') }}</h2>
+          <h2>{{ _('Le meilleur moyen de discutter avec vos contacts') }}</h2>
 
           <img src="{{'caliopen_website:assets/images/home_main_image_1.png'|static_path}}" />
           <img src="{{'caliopen_website:assets/images/home_main_image_2.png'|static_path}}" />
@@ -25,21 +25,21 @@
     <div class="layout">
       <div class="big-icons">
         <article id="video">
-          <h3>{{ _('Watch the CaliOpen video') }}</h3>
-          <a href="/">{{ _('camera') }}</a>
-          <p>{{ _('View the video of the presentation of the project and comments of Laurent Chemla.') }}</p>
+          <h3>{{ _('Origine de Caliopen') }}</h3>
+          <a href="/">{{ _('spotlight') }}</a>
+          <p>{{ _('Connaitre l\'idée initiatrice du projet présentée par Laurent Chemla.') }}</p>
         </article>
 
         <article id="github">
-          <h3>{{ _('CaliOpen on GitHub') }}</h3>
+          <h3>{{ _('CaliOpen sur GitHub') }}</h3>
           <a href="/">{{ _('octopus Github') }}</a>
-          <p>{{ _('Participate to the development of the project and get involved.') }}</p>
+          <p>{{ _('Participer au développement du projet et s\'impliquer.') }}</p>
         </article>
 
         <article id="details">
-          <h3>{{ _('CaliOpen in detail') }}</h3>
-          <a href="/">{{ _('features') }}</a>
-          <p>{{ _('Discover all key features of the application and our vision.') }}</p>
+          <h3>{{ _('CaliOpen en détails') }}</h3>
+          <a href="/">{{ _('Fonctionnalités') }}</a>
+          <p>{{ _('Découvrir toutes les fonctionnalités clés de l\'application et notre vision.') }}</p>
         </article>
       </div>
     </div>
