Use "safe" filter on main title (on homepage).

--- a/caliopen_website/templates/layout/home.jinja2
+++ b/caliopen_website/templates/layout/home.jinja2
@@ -5,7 +5,7 @@
     <div class="layout">
       <div>
         <article>
-          <h2>{{ _('Le meilleur moyen de discutter avec vos contacts') }}</h2>
+          <h2>{{ _('Le meilleur moyen de discutter avec vos contacts')|safe() }}</h2>
 
           <img src="{{'caliopen_website:assets/images/home_main_image_1.png'|static_path}}" />
           <img src="{{'caliopen_website:assets/images/home_main_image_2.png'|static_path}}" />
