Add mail address for "contact" page
... with translation (for default subject).

--- a/caliopen_website/templates/layout/contact.jinja2
+++ b/caliopen_website/templates/layout/contact.jinja2
@@ -23,7 +23,7 @@
 
         <article id="email">
           <h3>{{ _('Envoyer un email') }}</h3>
-          <a href="/" class="logo">{{ _('enveloppe') }}</a>
+          <a href="mailto:{{ _('contact@caliopen.org') }}?Subject={{ _('Contacter l\'équipe CaliOpen') }}" class="logo">{{ _('enveloppe') }}</a>
         </article>
 
         <article id="blog">
