Add urls for the main blocks (on homepage).

--- a/caliopen_website/templates/layout/home.jinja2
+++ b/caliopen_website/templates/layout/home.jinja2
@@ -26,19 +26,19 @@
       <div class="big-icons">
         <article id="video">
           <h3>{{ _('Origine de Caliopen') }}</h3>
-          <a href="/">{{ _('spotlight') }}</a>
+          <a href="{{'about'|route_path}}">{{ _('spotlight') }}</a>
           <p>{{ _('Connaitre l\'idée initiatrice du projet présentée par Laurent Chemla.') }}</p>
         </article>
 
         <article id="github">
           <h3>{{ _('CaliOpen sur GitHub') }}</h3>
-          <a href="/">{{ _('octopus Github') }}</a>
+          <a href="https://github.com/CaliOpen/CaliOpen">{{ _('octopus Github') }}</a>
           <p>{{ _('Participer au développement du projet et s\'impliquer.') }}</p>
         </article>
 
         <article id="details">
           <h3>{{ _('CaliOpen en détails') }}</h3>
-          <a href="/">{{ _('Fonctionnalités') }}</a>
+          <a href="{{'features'|route_path}}">{{ _('Fonctionnalités') }}</a>
           <p>{{ _('Découvrir toutes les fonctionnalités clés de l\'application et notre vision.') }}</p>
         </article>
       </div>
