Fix: missing end tags.

--- a/caliopen_website/templates/layout/about.jinja2
+++ b/caliopen_website/templates/layout/about.jinja2
@@ -9,6 +9,7 @@
           <p>{{ _('Un jour, Jérémie Zimmermann est passé chez moi, pendant ses vacances, en pleine affaire PRISM.\n\nNous avons parlé, ce jour là, d\'un ancien projet de service de courrier électronique, respectueux de la vie privée des utilisateurs, mais qui - face à l\'ogre Google - n\'a jamais vu le jour. Jérémie m\'a alors poussé à relancer ce projet, expliquant que désormais, grâce à Edward Snowden, une partie du public était sans doute prête à quitter GMail et les autres pour quelque chose de moins centralisé, de moins propriétaire, et qui ne soit pas basé sur l\'exploitation du contenu de nos échanges privés.\n\nDepuis ce jour, avec une équipe réunie grâce au soutien sans faille de Gandi et de la Quadrature du Net, nous avons travaillé dur.')|safe }}</p>
         </div>
       </div>
+    </div>
   </main>
 {% endblock %}
 
@@ -31,6 +32,7 @@
           <p>{{ _('Les moyens de garantir sa vie privée en ligne existent, mais leur usage reste trop complexe pour la plupart des utilisateurs. Il faut les simplifier.')|safe }}</p>
         </ol>
       </ul>
+    </div>
   </main>
 {% endblock %}
 
@@ -64,5 +66,6 @@
           </ul>
         </div>
       </div>
+    </div>
   </main>
 {% endblock %}
