Add meta tags for the website preview when sharing it.

--- a/caliopen_website/templates/layout/html.jinja2
+++ b/caliopen_website/templates/layout/html.jinja2
@@ -10,6 +10,10 @@
     <meta name="description" content="{{ page_description }}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <meta property="og:title" content="{{ _('CaliOpen, be safe.') }}" />
+    <meta property="og:description" content="{{ _('Le meilleur moyen de discutter avec vos contacts') }}" />
+    <meta property="og:image" content="{{'caliopen_website:assets/images/caliopen_blue.png'|static_url}}">
+
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <link rel="shortcut icon" sizes="16x16 32x32 48x48 64x64" href="{{'caliopen_website:assets/images/favicon.ico'|static_path}}" />
     {% if use_less %}
