Use translations instead of conf variables
for the title and description.

--- a/caliopen_website/templates/layout/html.jinja2
+++ b/caliopen_website/templates/layout/html.jinja2
@@ -6,8 +6,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>{{ page_title }}</title>
-    <meta name="description" content="{{ page_description }}">
+    <title>{{ _('CaliOpen, be safe.') }}</title>
+    <meta name="description" content="{{ _('Le meilleur moyen de discutter avec vos contacts') }}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta property="og:title" content="{{ _('CaliOpen, be safe.') }}" />
