--- a/caliopen_website/assets/css/styles.less
+++ b/caliopen_website/assets/css/styles.less
@@ -1,5 +1,5 @@
 @import "mixins.less";
-// @import "fonts.less";    #TOFIX
+// @import "fonts.less";    #FIXME
 
 @import "common.less";
 @import "slider.less";
