Fix "mixed content blocked" warning in https.
The webfont was not loaded.

--- a/caliopen_website/templates/layout/html.jinja2
+++ b/caliopen_website/templates/layout/html.jinja2
@@ -21,7 +21,7 @@
     {% else %}
         <link rel="stylesheet" type="text/css" href="{{'caliopen_website:assets/css/styles.css'|static_path}}" />
     {% endif %}
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
   </head>
   <body>
     <!--[if lt IE 7]>
