--- a/caliopen_website/templates/layout/html.jinja2
+++ b/caliopen_website/templates/layout/html.jinja2
@@ -12,7 +12,7 @@
 
     <meta property="og:title" content="{{ _('CaliOpen, be safe.') }}" />
     <meta property="og:description" content="{{ _('Le meilleur moyen de discutter avec vos contacts') }}" />
-    <meta property="og:image" content="{{'caliopen_website:assets/images/caliopen_blue.png'|static_url}}">
+    <meta property="og:image" content="https://www.caliopen.org/assets/images/caliopen_blue.png">
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <link rel="shortcut icon" sizes="16x16 32x32 48x48 64x64" href="{{'caliopen_website:assets/images/favicon.ico'|static_path}}" />
