--- a/caliopen_website/templates/layout/contact.jinja2
+++ b/caliopen_website/templates/layout/contact.jinja2
@@ -19,7 +19,7 @@
       <div class="big-icons">
         <article id="github">
           <h3>{{ _('Forker nous sur GitHub') }}</h3>
-          <a href="https://github.com/CaliOpen/CaliOpen" class="logo">{{ _('octopus Github') }}</a>
+          <a href="https://github.com/CaliOpen/caliopen.web" class="logo">{{ _('octopus Github') }}</a>
         </article>
 
         <article id="email">
@@ -27,10 +27,6 @@
           <a href="mailto:{{ _('contact@caliopen.org') }}?Subject={{ _('Contacter l\'équipe CaliOpen') }}" class="logo">{{ _('enveloppe') }}</a>
         </article>
 
-        <article id="blog">
-          <h3>{{ _('Visiter notre blog') }}</h3>
-          <a href="/" class="logo">{{ _('bubble') }}</a>
-        </article>
       </div>
     </div>
   </main>
