add contact on irc block

--- a/caliopen_website/assets/css/contact.less
+++ b/caliopen_website/assets/css/contact.less
@@ -59,6 +59,17 @@ main {
       }
     }
 
+    &#irc {
+      a {
+        background-image: url('/assets/images/contact_irc.png');
+        .size(87px, 88px);
+        .center-block();
+        &:hover {
+          background-image: url('/assets/images/contact_irc_hover.png');
+        }
+      }
+    }
+
     &#email {
       background: #EEEEEE;
 
