--- a/caliopen_website/templates/layout/contact.jinja2
+++ b/caliopen_website/templates/layout/contact.jinja2
@@ -26,7 +26,10 @@
           <h3>{{ _('Envoyer un email') }}</h3>
           <a href="mailto:{{ _('contact@caliopen.org') }}?Subject={{ _('Contacter l\'équipe CaliOpen') }}" class="logo">{{ _('enveloppe') }}</a>
         </article>
-
+        <article id="irc">
+          <h3>{{ _('Nous contacter sur irc') }}</h3>
+          <a href="irc://freenode.net:6667/caliopen" class="logo">{{ _('irc') }}</a>
+        </article>
       </div>
     </div>
   </main>
