(anglicisme) remplace supporté par soutenu

--- a/caliopen_website/templates/layout/page.jinja2
+++ b/caliopen_website/templates/layout/page.jinja2
@@ -55,7 +55,7 @@
   <div class="layout">
     <div>
       <div class="gandi">
-        <p id="support-by-gandi" class="column">{{ _('Un projet supporté par') }}
+        <p id="support-by-gandi" class="column">{{ _('Un projet soutenu par') }}
         <a href="http://www.gandi.net" title="Gandi.net" class="logo">Gandi.net</a></p>
       </div>
 
