--- a/caliopen_website/assets/css/common.less
+++ b/caliopen_website/assets/css/common.less
@@ -226,7 +226,7 @@ footer {
 main {
   a.button {
     display: inline-block;
-    margin: 40px 0 50px 0;
+    margin: 40px 10px 50px 0;
     .border-radius(8px);
     font-size: 1.8em;
     font-weight: 800;
