--- a/caliopen_website/templates/layout/tour.jinja2
+++ b/caliopen_website/templates/layout/tour.jinja2
@@ -11,7 +11,7 @@
             <li>{{ _('Partager en toute sécurité des informations confidentielles') }}</li>
             <li>{{ _('Profiter d\'une interface intuitive') }}</li>
           </ul>
-          <a href="assets/mockup/caliop.html" class="button">{{ 'Voir mockup'}}</a>
+          <a href="assets/mockup/caliop.html" class="button">{{ _('Voir mockup') }}</a>
           <a href="{{'features'|route_path}}">{{ _('Essayer la démo') }}</a>
         </article>
         <div class="screenshot">
