add link to blog

--- a/caliopen_website/templates/layout/page.jinja2
+++ b/caliopen_website/templates/layout/page.jinja2
@@ -49,6 +49,9 @@
               {% else %}
                 <a href="{{'faq'|route_path}}" class="button">{{ _('FAQ') }}</a>
               {% endif %}
+              <li id="navigation-main-blog">
+                <a href="https://blog.caliopen.org/" class="button">Blog</a>
+            </li>
             </li>
           </ul>
         </nav>
