fix github link on home to new web application repository

--- a/caliopen_website/templates/layout/home.jinja2
+++ b/caliopen_website/templates/layout/home.jinja2
@@ -32,7 +32,7 @@
 
         <article id="github">
           <h3>{{ _('CaliOpen sur GitHub') }}</h3>
-          <a href="https://github.com/CaliOpen/CaliOpen">{{ _('octopus Github') }}</a>
+          <a href="https://github.com/CaliOpen/caliopen.web">{{ _('octopus Github') }}</a>
           <p>{{ _('Participer au développement du projet et s\'impliquer.') }}</p>
         </article>
 
