[fix] remaining /caliop[^e]/i into CaliopEN (bordel) and some typos in fr/en translations

--- a/caliopen_website/templates/layout/about.jinja2
+++ b/caliopen_website/templates/layout/about.jinja2
@@ -43,7 +43,7 @@
         <div class="content">
           <ul>
             <li id="open">
-              <h3>{{ _('Un outils ouvert') }}</h3>
+              <h3>{{ _('Un outil ouvert') }}</h3>
               <p>{{ _('Nous devons créer un logiciel libre, que n\'importe quel administrateur système puisse installer aussi facilement qu\'un CMS.\n\nNous devons faire en sorte que chaque instance de notre outil puisse dialoguer avec les autres, de façon sécurisée. Et nous devons, en même temps, rester ouverts aux protocoles standards, pour ne pas limiter les contacts de nos utilisateurs aux seuls autres participants à notre réseau de services.')|safe }}</p>
               <p><strong>{{ _('Nous devons créer plus qu\'un outil : un écosystème.')|safe }}</strong></p>
             </li>
