update all caliopen.web link on github to our entrypoint located on caliopen.github.io URL

--- a/caliopen_website/templates/layout/contact.jinja2
+++ b/caliopen_website/templates/layout/contact.jinja2
@@ -19,7 +19,7 @@
       <div class="big-icons">
         <article id="github">
           <h3>{{ _('Forker nous sur GitHub') }}</h3>
-          <a href="https://github.com/CaliOpen/caliopen.web" class="logo">{{ _('octopus Github') }}</a>
+          <a href="https://caliopen.github.io" class="logo">{{ _('octopus Github') }}</a>
         </article>
 
         <article id="email">
