--- a/caliopen_website/templates/layout/contact.jinja2
+++ b/caliopen_website/templates/layout/contact.jinja2
@@ -18,7 +18,7 @@
     <div class="layout">
       <div class="big-icons">
         <article id="github">
-          <h3>{{ _('Forker nous sur GitHub') }}</h3>
+          <h3>{{ _('Forkez nous sur GitHub') }}</h3>
           <a href="https://caliopen.github.io" class="logo">{{ _('octopus Github') }}</a>
         </article>
 
@@ -26,9 +26,15 @@
           <h3>{{ _('Envoyer un email') }}</h3>
           <a href="mailto:{{ _('contact@caliopen.org') }}?Subject={{ _('Contacter l\'équipe CaliOpen') }}" class="logo">{{ _('enveloppe') }}</a>
         </article>
+
         <article id="irc">
           <h3>{{ _('Nous contacter sur irc') }}</h3>
           <a href="irc://freenode.net:6667/caliopen" class="logo">{{ _('irc') }}</a>
+        </article>
+
+        <article id="trello">
+          <h3>{{ _('Nous suivre sur Trello') }}</h3>
+          <a href="https://trello.com/b/cdTlFmyN/caliopen" class="logo">{{ _('trello') }}</a>
         </article>
       </div>
     </div>
