--- a/caliopen_website/templates/layout/html.jinja2
+++ b/caliopen_website/templates/layout/html.jinja2
@@ -6,11 +6,11 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>{{ _('CaliOpen, be safe.') }}</title>
+    <title>{{ _('CaliOpen, be good.') }}</title>
     <meta name="description" content="{{ _('Le meilleur moyen de discuter avec vos contacts') }}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta property="og:title" content="{{ _('CaliOpen, be safe.') }}" />
+    <meta property="og:title" content="{{ _('CaliOpen, be good.') }}" />
     <meta property="og:description" content="{{ _('Le meilleur moyen de discuter avec vos contacts') }}" />
     <meta property="og:image" content="https://www.caliopen.org/assets/images/caliopen_blue.png">
 
