--- a/caliopen_website/templates/layout/page.jinja2
+++ b/caliopen_website/templates/layout/page.jinja2
@@ -74,7 +74,7 @@
         <div>
           <ul class="footer-links column">
             <li id="footer-link-community" class="list-title">{{ _('Communauté') }}</li>
-            <li id="footer-link-fork-us"><a href="https://caliopen.github.io">{{ _('Forker nous sur GitHub') }}</a></li>
+            <li id="footer-link-fork-us"><a href="https://caliopen.github.io">{{ _('Forkez nous sur GitHub') }}</a></li>
           </ul>
         </div>
       </div>
