Ember->Angular en VF

--- a/caliopen_website/templates/layout/contact.jinja2
+++ b/caliopen_website/templates/layout/contact.jinja2
@@ -6,7 +6,7 @@
       <div>
         <div class="content">
           <h2>{{ _('Aujourd\'hui, nous avons besoin d\'aide.') }}</h2>
-          <p>{{ _('Pour avancer plus rapidement sur le développement de notre interface utilisateur, nous avons besoin de développeurs Web (Ember.js, Pyramid, Python). Nous avons besoin de compétences dans le domaine de la cryptographie, pour valider nos choix ou pour les améliorer.\n\nPour toute question, ou pour proposer votre aide, vous pouvez nous contacter.')|safe }}</p>
+          <p>{{ _('Pour avancer plus rapidement sur le développement de notre interface utilisateur, nous avons besoin de développeurs Web (Angular, Pyramid, Python). Nous avons besoin de compétences dans le domaine de la cryptographie, pour valider nos choix ou pour les améliorer.\n\nPour toute question, ou pour proposer votre aide, vous pouvez nous contacter.')|safe }}</p>
         </div>
       </div>
     </div>
